# memory-pool-manager

memory-pool-manager/: .gitignore
memory-pool-manager/.github/workflows/: ci.yml
memory-pool-manager/docs/: DESIGN.md
memory-pool-manager/include/mempool/: adapters.hpp  central_cache.hpp  size_classes.hpp  slab.hpp
memory-pool-manager/memory-pool-manager/: CMakeLists.txt  README.md
memory-pool-manager/memory-pool-manager/bench/: benchmark.cpp
memory-pool-manager/memory-pool-manager/include/mempool/: pool_allocator.hpp
memory-pool-manager/tests/: stress_test.cpp  test_main.cpp
